unpackaged/main/default/objects/Budget/Budget.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>