unpackaged/main/default/objects/Budget/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked for budgets currently being used/spent down.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>