unpackaged/main/default/objects/Budget/fields/Actual_Expenses_2__c.field-meta.xml
<CustomField>
    <fullName>Actual_Expenses_2__c</fullName>
    <formula>Child_Budgets_Actual_expenses__c +  Total_Budget_Expenses_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of payments (or portion of payments) paid by this budget or by one of it&#39;s child budgets (i.e. sum of hidden &quot;Child Budgets Actual Expenses&quot; field + &quot;Actual Expenses&quot; field).</inlineHelpText>
    <label>Actual Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>