unpackaged/main/default/objects/Budget/fields/Actual_Expenses_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Actual_Expenses_Rollup__c</fullName>
    <inlineHelpText>Sum of payments (or portion of payments) paid by this budget (via a bridge budget contribution record) and related to an Approved grant. Includes all non void/canceled/written-off payments. Rolled-up by DLRS.</inlineHelpText>
    <label>Actual Expenses Rollup</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>