unpackaged/main/default/objects/Budget/fields/Assigned_Users__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Users__c</fullName>
    <inlineHelpText>Concatenated list of the User IDs for Users assigned to this Budget (see Budget Assignment related list).Used for the &quot;Current User Assigned&quot; field that in turns is used to filter lists and reports showing the user the budgets they are assigned too. Rolled up using DLRS action named &quot;Budget User Assignments&quot;</inlineHelpText>
    <label>Assigned Users</label>
    <type>TextArea</type>
</CustomField>