unpackaged/main/default/objects/Budget/fields/Budget_Balance__c.field-meta.xml
<CustomField>
    <fullName>Budget_Balance__c</fullName>
    <formula>Total_Budget__c  - Total_Budget_Expenses_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total unallocated budget amount (i.e. &#39;Total Budget&#39; minus &#39;Total Budget Expenses&#39;)</inlineHelpText>
    <label>Budget Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>