unpackaged/main/default/objects/Budget/fields/Child_Budget_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Child_Budget_Total_Amount__c</fullName>
    <label>Child Budget Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>