unpackaged/main/default/objects/Budget/fields/Child_Budgets_Actual_expenses__c.field-meta.xml
<CustomField>
    <fullName>Child_Budgets_Actual_expenses__c</fullName>
    <inlineHelpText>For department (i.e. parent) budgets, rollup of the &quot;Actual Expenses Rollup&quot; field from all child budgets. Included in &quot;Actual Expenses&quot; field on the layout. Rolled- up using DLRS called: &quot;Child Budgets Actual Expenses&quot;.</inlineHelpText>
    <label>Child Budgets Actual expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>