unpackaged/main/default/objects/Budget/fields/Child_Budgets_Projected_expenses__c.field-meta.xml
<CustomField>
    <fullName>Child_Budgets_Projected_expenses__c</fullName>
    <inlineHelpText>For department (i.e. parent) budgets, rollup of the &quot;Projected Expenses Rollup&quot; field from all child budgets. Included in &quot;Projected Expenses&quot; field on the layout. Rolled- up using DLRS called: &quot;Child Budgets Projected Expenses&quot;.</inlineHelpText>
    <label>Child Budgets Projected expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>