unpackaged/main/default/objects/Budget/fields/Child_Budgets_Total_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Child_Budgets_Total_Expenses__c</fullName>
    <inlineHelpText>For department (i.e. parent) budgets, rollup of the &quot;Total Budget Expenses Rollup&quot; field from all child budgets. Included in &quot;Total Budget Expenses&quot; field on the layout. Rolled- up using DLRS called: &quot;Child Budgets Total Expenses&quot;.</inlineHelpText>
    <label>Child Budgets Total Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>