unpackaged/main/default/objects/Budget/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Include any general information regarding this budget.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>