unpackaged/main/default/objects/Budget/fields/Fiscal_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_End_Date__c</fullName>
    <inlineHelpText>End Date for the budget&#39;s fiscal year.</inlineHelpText>
    <label>Fiscal End Date</label>
    <type>Date</type>
</CustomField>