unpackaged/main/default/objects/Budget/fields/Fiscal_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Start_Date__c</fullName>
    <inlineHelpText>Start Date for the budget&#39;s fiscal year.</inlineHelpText>
    <label>Fiscal Start Date</label>
    <type>Date</type>
</CustomField>