unpackaged/main/default/objects/Budget/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <inlineHelpText>What fiscal year this budget is for. Included in budget name when record is created.</inlineHelpText>
    <label>Fiscal Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FY15</fullName>
            </value>
            <value>
                <fullName>FY16</fullName>
            </value>
            <value>
                <fullName>FY17</fullName>
            </value>
            <value>
                <fullName>FY18</fullName>
            </value>
            <value>
                <fullName>FY19</fullName>
            </value>
            <value>
                <fullName>FY20</fullName>
            </value>
            <value>
                <fullName>FY21</fullName>
            </value>
            <value>
                <fullName>FY22</fullName>
            </value>
            <value>
                <fullName>Pre-FY18</fullName>
            </value>
            <value>
                <fullName>FY23</fullName>
            </value>
            <value>
                <fullName>FY24</fullName>
            </value>
            <value>
                <fullName>FY25</fullName>
            </value>
            <value>
                <fullName>FY26</fullName>
            </value>
            <value>
                <fullName>FY27</fullName>
            </value>
            <value>
                <fullName>FY28</fullName>
            </value>
            <value>
                <fullName>FY29</fullName>
            </value>
            <value>
                <fullName>FY30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>