unpackaged/main/default/objects/Budget/fields/Original_Budget_Amount__c.field-meta.xml
<CustomField>
    <fullName>Original_Budget_Amount__c</fullName>
    <inlineHelpText>This is the original budget amount entered into MIP at the beginning of the FY.</inlineHelpText>
    <label>Original Budget Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>