unpackaged/main/default/objects/Budget/fields/Original_Core_Budget_Amount__c.field-meta.xml
<CustomField>
    <fullName>Original_Core_Budget_Amount__c</fullName>
    <inlineHelpText>Original Core Budget Amount - does NOT include supplemental funds.</inlineHelpText>
    <label>Original Core Budget Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>