unpackaged/main/default/objects/Budget/fields/Projected_Expenses_2__c.field-meta.xml
<CustomField>
    <fullName>Projected_Expenses_2__c</fullName>
    <formula>Total_Budget_Expenses_Rollup__c  + Child_Budgets_Projected_expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Projected Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>