unpackaged/main/default/objects/Budget/fields/Projected_Expenses_Rollup_1__c.field-meta.xml
<CustomField>
    <fullName>Projected_Expenses_Rollup_1__c</fullName>
    <inlineHelpText>Sum of payments (or portion of payments) paid by this budget (via a bridge budget contribution record) and related to a YET TO BE approved grant. Includes all non void/canceled/written-off payments. Rolled-up by DLRS.</inlineHelpText>
    <label>Projected Expenses Rollup</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>