unpackaged/main/default/objects/Budget/fields/Total_Budget_Expenses_2__c.field-meta.xml
<CustomField>
    <fullName>Total_Budget_Expenses_2__c</fullName>
    <formula>Child_Budgets_Total_Expenses__c  +   Total_Budget_Expenses_Rollup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of all expenses (i.e. projected or actual) for this budget and it&#39;s child budgets.</inlineHelpText>
    <label>Total Budget Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>