unpackaged/main/default/objects/Budget/fields/Total_Budget_Expenses_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Total_Budget_Expenses_Rollup__c</fullName>
    <inlineHelpText>Sum of payments (or portion of payments) paid by this budget (via a bridge budget contribution record), Includes all non void/canceled/written-off payments. Rolled-up by DLRS.</inlineHelpText>
    <label>Total Budget Expenses Rollup</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>